RCPSP/Problem/test
g++  -I/home/mnattaf/Library/include -I./header -std=c++11 -O2 -m64 -fPIC -march=native -Werror  -Wall  -c -o /home/mnattaf/Dev/RCPSP/Problem/source/resource.o /home/mnattaf/Dev/RCPSP/Problem/source/resource.cpp
g++  -I/home/mnattaf/Library/include -I./header -std=c++11 -O2 -m64 -fPIC -march=native -Werror  -Wall  -c -o /home/mnattaf/Dev/RCPSP/Problem/source/problem.o /home/mnattaf/Dev/RCPSP/Problem/source/problem.cpp
/home/mnattaf/Dev/RCPSP/Problem/source/problem.cpp: In member function ‘int problem::readFromFile(std::ifstream&)’:
/home/mnattaf/Dev/RCPSP/Problem/source/problem.cpp:34:27: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
   for (i=0;i<this->nbTask();++i){
                           ^
/home/mnattaf/Dev/RCPSP/Problem/source/problem.cpp:43:16: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
     for (j=0;j<nbSucc;++j){
                ^
In file included from /usr/include/c++/4.8/vector:62:0,
                 from /home/mnattaf/Dev/RCPSP/Problem/source/problem.cpp:1:
/usr/include/c++/4.8/bits/stl_construct.h: In instantiation of ‘void std::_Construct(_T1*, _Args&& ...) [with _T1 = task; _Args = {}]’:
/usr/include/c++/4.8/bits/stl_uninitialized.h:495:43:   required from ‘static void std::__uninitialized_default_n_1<_TrivialValueType>::__uninit_default_n(_ForwardIterator, _Size) [with _ForwardIterator = task*; _Size = long unsigned int; bool _TrivialValueType = false]’
/usr/include/c++/4.8/bits/stl_uninitialized.h:544:33:   required from ‘void std::__uninitialized_default_n(_ForwardIterator, _Size) [with _ForwardIterator = task*; _Size = long unsigned int]’
/usr/include/c++/4.8/bits/stl_uninitialized.h:605:50:   required from ‘void std::__uninitialized_default_n_a(_ForwardIterator, _Size, std::allocator<_Tp>&) [with _ForwardIterator = task*; _Size = long unsigned int; _Tp = task]’
/usr/include/c++/4.8/bits/vector.tcc:541:39:   required from ‘void std::vector<_Tp, _Alloc>::_M_default_append(std::vector<_Tp, _Alloc>::size_type) [with _Tp = task; _Alloc = std::allocator<task>; std::vector<_Tp, _Alloc>::size_type = long unsigned int]’
/usr/include/c++/4.8/bits/stl_vector.h:667:41:   required from ‘void std::vector<_Tp, _Alloc>::resize(std::vector<_Tp, _Alloc>::size_type) [with _Tp = task; _Alloc = std::allocator<task>; std::vector<_Tp, _Alloc>::size_type = long unsigned int]’
/home/mnattaf/Dev/RCPSP/Problem/source/problem.cpp:7:18:   required from here
/usr/include/c++/4.8/bits/stl_construct.h:75:7: error: no matching function for call to ‘task::task()’
     { ::new(static_cast<void*>(__p)) _T1(std::forward<_Args>(__args)...); }
       ^
/usr/include/c++/4.8/bits/stl_construct.h:75:7: note: candidates are:
In file included from ./header/problem.h:5:0,
                 from /home/mnattaf/Dev/RCPSP/Problem/source/problem.cpp:4:
./header/task.h:13:2: note: task::task(const task&)
  task(const task&);
  ^
./header/task.h:13:2: note:   candidate expects 1 argument, 0 provided
./header/task.h:12:2: note: task::task(type, const std::vector<int>&, const std::vector<int>&)
  task(type,const std::vector<type>&,const std::vector<int>&);
  ^
./header/task.h:12:2: note:   candidate expects 3 arguments, 0 provided
./header/task.h:11:2: note: task::task(int, int)
  task(int, int);
  ^
./header/task.h:11:2: note:   candidate expects 2 arguments, 0 provided
cc1plus: all warnings being treated as errors
make: *** [/home/mnattaf/Dev/RCPSP/Problem/source/problem.o] Erreur 1
